--- a/Crew UI/ClientApp/components/systems/warp/Warp.scss
+++ b/Crew UI/ClientApp/components/systems/warp/Warp.scss
@@ -2,10 +2,11 @@
 
 .warp {
     display: grid;
+    height: 100%;
 
     @include landscape() {
         grid-template-rows: 1fr;
-        grid-template-columns: 3fr 2fr;
+        grid-template-columns: 2fr 1fr;
         grid-template-areas: "map controls";
     }
 
